fix modal not fitting the whole screen when scrolling

--- a/src/components/loader.module.css
+++ b/src/components/loader.module.css
@@ -1,5 +1,5 @@
 .center{
-    position: absolute;
+    position: fixed;
     width: 100vw;
     display: flex;
     justify-content: center;
